--- a/src/404.html
+++ b/src/404.html
@@ -174,24 +174,24 @@
   </header>
   <main>
     <section class="no-page__main">
-      <div class="no-page__bread bread">
-        <div class="bread__inner inner">
+      <div class="nopage__inner inner">
+        <div class="no-page__bread bread">
           <a href="index.html" class="bread__top">TOP</a>
           <div class="bread__arrow"><img src="./assets/images/common/pager-white.png" alt="パンくず矢印"></div>
           <div class="bread__detail">404</div>
         </div>
-      </div>
-      <div class="no-page__title-wrapper">
-        <h1 class="no-page__title">404</h1>
-      </div>
-      <div class="no-page__texts">
-        <p>申し訳ありません。</p>
-        <p>お探しのページが見つかりません。</p>
-      </div>
-      <div class="no-page__btn-wrapper">
-        <a href="./index.html" class="btn btn--white">Page TOP
-          <span></span>
-        </a>
+        <div class="no-page__title-wrapper">
+          <h1 class="no-page__title">404</h1>
+        </div>
+        <div class="no-page__texts">
+          <p>申し訳ありません。</p>
+          <p>お探しのページが見つかりません。</p>
+        </div>
+        <div class="no-page__btn-wrapper">
+          <a href="./index.html" class="btn btn--white">Page TOP
+            <span></span>
+          </a>
+        </div>
       </div>
     </section>
   </main>
