--- a/src/campaign.html
+++ b/src/campaign.html
@@ -183,163 +183,161 @@
         <h1>Campaign</h1>
       </div>
     </section>
-    <div class="bread">
-      <div class="bread__inner inner">
+    <div class="inner">
+      <div class="bread">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">キャンペーン</div>
       </div>
-    </div>
-    <section class="campaign">
-      <div class="campaign__tabs-wrapper inner">
+      <section class="campaign campaign-wrapper">
         <div class="campaign__tabs tabs">
-          <input type="radio" checked id="1" name="voice" /><label for="1">ALL</label>
-          <input type="radio" id="2" name="voice" /><label for="2">ライセンス講習</label>
-          <input type="radio" id="3" name="voice" /><label for="3">ファンダイビング</label>
-          <input type="radio" id="4" name="voice" /><label for="4">体験ダイビング</label>
+          <a href="#" class="tabs__item tab">ALL</a>
+          <a href="#" class="tabs__item tab">ライセンス講習</a>
+          <a href="#" class="tabs__item tab">ファンダイビング</a>
+          <a href="#" class="tabs__item tab">体験ダイビング</a>
         </div>
-      </div>
-      <div class="campaign__inner inner">
-        <div class="campaign__cards">
-          <div class="campaign__cards-item campaign-card" id="license-campaign">
-            <figure class="campaign-card__img">
-              <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
-            </figure>
-            <div class="campaign-card__body  campaign-card__body--lower">
-              <div class="campaign-card__category">ライセンス講習</div>
-              <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title campaign-card__title--lower">ライセンス取得</h3>
+        <div class="campaign__inner">
+          <div class="campaign__cards">
+            <div class="campaign__cards-item campaign-card" id="license-campaign">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign1.png" alt="色鮮やかな魚たちの写真" />
+              </figure>
+              <div class="campaign-card__body  campaign-card__body--lower">
+                <div class="campaign-card__category">ライセンス講習</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title campaign-card__title--lower">ライセンス取得</h3>
+                </div>
+              </div>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥56,000</p>
+                  <p class="campaign-card__after-price">¥46,000</p>
+                </div>
+                <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                </p>
+                <p class="campaign-card__date">2023/6/1-9/30</p>
+                <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-card__btn-wrapper">
+                  <a href="./contact-form.html" class="btn">Contact us
+                    <span></span>
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="campaign-card__contents">
-              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
-              <div class="campaign-card__price-wrapper">
-                <p class="campaign-card__pre-price">¥56,000</p>
-                <p class="campaign-card__after-price">¥46,000</p>
+            <div class="campaign-card" id="trial-campaign">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
+              </figure>
+              <div class="campaign-card__body  campaign-card__body--lower">
+                <div class="campaign-card__category">体験ダイビング</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title  campaign-card__title--lower">貸切体験ダイビング</h3>
+                </div>
               </div>
-              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-              </p>
-              <p class="campaign-card__date">2023/6/1-9/30</p>
-              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <div class="campaign-card__btn-wrapper">
-                <a href="./contact-form.html" class="btn">Contact us
-                  <span></span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="campaign-card" id="trial-campaign">
-            <figure class="campaign-card__img">
-              <img src="./assets/images/common/campaign2.png" alt="船とエメラルドグリーンのビーチ" />
-            </figure>
-            <div class="campaign-card__body  campaign-card__body--lower">
-              <div class="campaign-card__category">体験ダイビング</div>
-              <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title  campaign-card__title--lower">貸切体験ダイビング</h3>
-              </div>
-            </div>
-            <div class="campaign-card__contents">
-              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
-              <div class="campaign-card__price-wrapper">
-                <p class="campaign-card__pre-price">¥24,000</p>
-                <p class="campaign-card__after-price">¥18,000</p>
-              </div>
-              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-              </p>
-              <p class="campaign-card__date">2023/6/1-9/30</p>
-              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <div class="campaign-card__btn-wrapper">
-                <a href="./contact-form.html" class="btn">Contact us
-                  <span></span>
-                </a>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥24,000</p>
+                  <p class="campaign-card__after-price">¥18,000</p>
+                </div>
+                <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                </p>
+                <p class="campaign-card__date">2023/6/1-9/30</p>
+                <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-card__btn-wrapper">
+                  <a href="./contact-form.html" class="btn">Contact us
+                    <span></span>
+                  </a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="campaign-card" id="trial-campaign">
-            <figure class="campaign-card__img">
-              <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
-            </figure>
-            <div class="campaign-card__body campaign-card__body--lower">
-              <div class="campaign-card__category">体験ダイビング</div>
-              <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title campaign-card__title--lower">ナイトダイビング</h3>
+            <div class="campaign-card" id="trial-campaign">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign3.png" alt="小さなクラゲの大群" />
+              </figure>
+              <div class="campaign-card__body campaign-card__body--lower">
+                <div class="campaign-card__category">体験ダイビング</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title campaign-card__title--lower">ナイトダイビング</h3>
+                </div>
+              </div>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥10,000</p>
+                  <p class="campaign-card__after-price">¥8,000</p>
+                </div>
+                <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                </p>
+                <p class="campaign-card__date">2023/6/1-9/30</p>
+                <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-card__btn-wrapper">
+                  <a href="./contact-form.html" class="btn">Contact us
+                    <span></span>
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="campaign-card__contents">
-              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
-              <div class="campaign-card__price-wrapper">
-                <p class="campaign-card__pre-price">¥10,000</p>
-                <p class="campaign-card__after-price">¥8,000</p>
+            <div class="campaign-card" id="fun-campaign">
+              <figure class="campaign-card__img">
+                <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
+              </figure>
+              <div class="campaign-card__body  campaign-card__body--lower">
+                <div class="campaign-card__category">ファンダイビング</div>
+                <div class="campaign-card__title-wrapper">
+                  <h3 class="campaign-card__title campaign-card__title--lower">貸切ファンダイビング</h3>
+                </div>
               </div>
-              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-              </p>
-              <p class="campaign-card__date">2023/6/1-9/30</p>
-              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <div class="campaign-card__btn-wrapper">
-                <a href="./contact-form.html" class="btn">Contact us
-                  <span></span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="campaign-card" id="fun-campaign">
-            <figure class="campaign-card__img">
-              <img src="./assets/images/common/campaign4.png" alt="ダイビングを楽しむ２人組" />
-            </figure>
-            <div class="campaign-card__body  campaign-card__body--lower">
-              <div class="campaign-card__category">ファンダイビング</div>
-              <div class="campaign-card__title-wrapper">
-                <h3 class="campaign-card__title campaign-card__title--lower">貸切ファンダイビング</h3>
-              </div>
-            </div>
-            <div class="campaign-card__contents">
-              <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
-              <div class="campaign-card__price-wrapper">
-                <p class="campaign-card__pre-price">¥20,000</p>
-                <p class="campaign-card__after-price">¥16,000</p>
-              </div>
-              <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-              </p>
-              <p class="campaign-card__date">2023/6/1-9/30</p>
-              <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-              <div class="campaign-card__btn-wrapper">
-                <a href="./contact-form.html" class="btn">Contact us
-                  <span></span>
-                </a>
+              <div class="campaign-card__contents">
+                <p class="campaign-card__text campaign-card__text--lower">全部コミコミ(お一人様)</p>
+                <div class="campaign-card__price-wrapper">
+                  <p class="campaign-card__pre-price">¥20,000</p>
+                  <p class="campaign-card__after-price">¥16,000</p>
+                </div>
+                <p class="campaign-card__detail">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                </p>
+                <p class="campaign-card__date">2023/6/1-9/30</p>
+                <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
+                <div class="campaign-card__btn-wrapper">
+                  <a href="./contact-form.html" class="btn">Contact us
+                    <span></span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="campaign__pager-wrapper pager-wrapper">
-        <div class="campaign__pager pager">
-          <a href="#" class="pager__before">
-            <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path class="pager__path" d="M9 1L1 9L9 17" stroke="#408F95" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </a>
-          <div class="pager__number-wrapper">
-            <a href="#" class="pager__number">1</a>
-            <a href="#" class="pager__number">2</a>
-            <a href="#" class="pager__number">3</a>
-            <a href="#" class="pager__number">4</a>
-            <a href="#" class="pager__number">5</a>
-            <a href="#" class="pager__number">6</a>
+        <div class="campaign__pager-wrapper pager-wrapper">
+          <div class="campaign__pager pager">
+            <a href="#" class="pager__before">
+              <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path class="pager__path" d="M9 1L1 9L9 17" stroke="#408F95" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </a>
+            <div class="pager__number-wrapper">
+              <a href="#" class="pager__number">1</a>
+              <a href="#" class="pager__number">2</a>
+              <a href="#" class="pager__number">3</a>
+              <a href="#" class="pager__number">4</a>
+              <a href="#" class="pager__number">5</a>
+              <a href="#" class="pager__number">6</a>
+            </div>
+            <a href="#" class="pager__after"><svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg></a>
           </div>
-          <a href="#" class="pager__after"><svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18"
-              fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg></a>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <!--contact-->
     <section class="contact contact-wrapper  contact-wrapper--campaign">
       <div class="contact__inner inner">
