--- a/src/contact-FAQ.html
+++ b/src/contact-FAQ.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -160,7 +160,7 @@
                 </div>
               </div>
               <ul class="site-map__main">
-                <li class="site-map__main-title"><a href="./contact-FAQ.html">よくある質問</a></li>
+                <li class="site-map__main-title"><a href="./contact-faq.html">よくある質問</a></li>
                 <li class="site-map__main-title">
                   <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
                 </li>
@@ -180,91 +180,91 @@
         <h1>FAQ</h1>
       </div>
     </section>
-    <div class="bread">
-      <div class="bread__inner inner">
+    <div class="inner">
+      <div class="bread">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">よくある質問</div>
       </div>
-    </div>
-    <section class="contact-FAQ">
-      <div class="inner contact-FAQ__inner ">
-        <div class="contact-FAQ__wrapper">
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
+      <section class="contact-faq">
+        <div class="contact-faq__inner">
+          <div class="contact-faq__wrapper faq-wrapper">
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
-            </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
-            </div>
-          </div>
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
-            </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
-            </div>
-          </div>
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
-            </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
-            </div>
-          </div>
-          <div class="contact-FAQ__FAQ">
-            <div class="contact-FAQ__question">
-              <h2>ここに質問が入ります。</h2>
-            </div>
-            <div class="contact-FAQ__answer">
-              <p>
-                ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
-              </p>
+            <div class="contact-faq__faq faq-wrapper__item faq">
+              <div class="faq__question open">
+                <h2>ここに質問が入ります。</h2>
+              </div>
+              <div class="faq__answer" style="display: block;">
+                <p>
+                  ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <!--contact-->
-    <section class="contact contact-wrapper contact-wrapper--FAQ">
+    <section class="contact contact-wrapper contact-wrapper--faq">
       <div class="contact__inner inner">
         <div class="contact__content-inner">
           <div class="contact__address-wrapper">
