--- a/src/contact-form-success.html
+++ b/src/contact-form-success.html
@@ -179,26 +179,25 @@
         <h1>Contact</h1>
       </div>
     </section>
-    <div class="bread">
-      <div class="bread__inner inner">
+    <div class="inner">
+      <div class="bread">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
         <div class="bread__detail">お問い合わせ</div>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt=""></div>
         <div class="bread__detail">送信完了</div>
       </div>
-    </div>
-    <section class="contact-form contact-form-wrapper contact-form-wrapper--success">
-      <div class="contact-form__inner inner">
-        <h2 class="contact-form__success-title">お問い合わせ内容を送信完了しました。</h2>
-        <div class="contact-form__success">
-          <p>このたびは、お問い合わせ頂き<wbr />誠にありがとうございます。</p>
-          <p>お送り頂きました内容を確認の上、<wbr />3営業日以内に折り返しご連絡させて頂きます。</p>
-          <p>また、ご記入頂いたメールアドレスへ、<wbr />自動返信の確認メールをお送りしております。</p>
+      <section class="contact-form contact-form-wrapper contact-form-wrapper--success">
+        <div class="contact-form__inner">
+          <h2 class="contact-form__success-title">お問い合わせ内容を送信完了しました。</h2>
+          <div class="contact-form__success">
+            <p>このたびは、お問い合わせ頂き<wbr />誠にありがとうございます。</p>
+            <p>お送り頂きました内容を確認の上、<wbr />3営業日以内に折り返しご連絡させて頂きます。</p>
+            <p>また、ご記入頂いたメールアドレスへ、<wbr />自動返信の確認メールをお送りしております。</p>
+          </div>
         </div>
-      </div>
-    </section>
-
+      </section>
+    </div>
   </main>
   <!--footer-->
   <footer class="footer footer-wrapper" id="footer">
@@ -267,7 +266,6 @@
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
               <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
-              <li class="site-map__main-title"><a href="./404.html">404</a></li>
             </ul>
           </div>
         </nav>
