--- a/src/index.html
+++ b/src/index.html
@@ -42,28 +42,31 @@
 </head>
 
 <body>
-  <!--loading-->
-  <div class="js-loading__start">
-    <div class="js-loading__texts js-loading__texts--green">
-      <h2 class="js-loading__main-text">DIVING</h2>
-      <p class="js-loading__sub-text">into the ocean</p>
+  <!--loading
+  <div class="js-loading">
+    <div class="js-loading__start">
+      <div class="js-loading__texts js-loading__texts--green">
+        <h2 class="js-loading__main-text">DIVING</h2>
+        <p class="js-loading__sub-text">into the ocean</p>
+      </div>
     </div>
-  </div>
-  <div class="js-loading__middle">
-    <div class="js-loading__left"></div>
-    <div class="js-loading__right"></div>
-  </div>
-  <div class="js-loading__last">
-    <div class="js-loading__texts">
-      <h2 class="js-loading__main-text">DIVING</h2>
-      <p class="js-loadingr__sub-text">into the ocean</p>
+    <div class="js-loading__middle">
+      <div class="js-loading__left"></div>
+      <div class="js-loading__right"></div>
     </div>
-  </div>
+    <div class="js-loading__last">
+      <div class="js-loading__texts">
+        <h2 class="js-loading__main-text">DIVING</h2>
+        <p class="js-loadingr__sub-text">into the ocean</p>
+      </div>
+    </div>
+  </div>-->
   <!--header-->
   <header class="no-page__header header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
-      <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
+      <h1 class="header__logo"><a href="index.html"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
+      </h1>
       <div class="header__content">
         <div class="header__hamburger" id="js-hamburger"><span></span><span></span><span></span></div>
         <!--PC-header-->
@@ -672,7 +675,6 @@
               <li class="site-map__main-title"><a href="./terms-of-service.html">利用規約</a></li>
               <li class="site-map__main-title"><a href="./contact-form.html">お問い合わせ</a></li>
               <li class="site-map__main-title"><a href="./site-map.html">サイトマップ</a></li>
-              <li class="site-map__main-title"><a href="./404.html">404</a></li>
             </ul>
           </div>
         </nav>
