--- a/src/price.html
+++ b/src/price.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <header class="no-page__header header">
+  <header class="header">
     <!--SP-hamburger-header-->
     <div class="header__inner">
       <a href="index.html" class="header__logo"><img src="./assets/images/common/logo.png" alt="コードアップスのロゴ" /></a>
@@ -126,7 +126,8 @@
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
-                    <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./campaign.html#tr class="
+                        menu__list"ial-campaign">貸切体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                   </ul>
                 </div>
@@ -137,7 +138,8 @@
                 <div class="site-map__sub-group">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./information.html#tr class="
+                        menu__list"ial-info">体験ダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                   </ul>
                 </div>
@@ -151,7 +153,8 @@
                 <div class="site-map__sub">
                   <ul class="site-map__sub-titles">
                     <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
-                    <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
+                    <li class="site-map__sub-title"><a href="./price.html#tr class=" menu__list"ial-price">体験ダイビング</a>
+                    </li>
                     <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
                     <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
                   </ul>
@@ -178,109 +181,107 @@
         <h1>Price</h1>
       </div>
     </section>
-    <div class="bread">
-      <div class="bread__inner inner">
+    <div class="inner">
+      <div class="bread">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">料金一覧</div>
       </div>
+      <section class="price price-wrapper">
+        <div class="price__inner">
+          <div class="price__menu-wrapper menus">
+            <div class="price__menu menus__item menu" id="license-price">
+              <div class="menu__title-wrapper">
+                <h2 class="menu__title">ライセンス取得</h2>
+                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+              </div>
+              <dl class="menu__lists">
+                <div class="menu__list">
+                  <dt class="menu__name">オープンウォーター<br class="menu__pc-none">ダイバーコース</dt>
+                  <dd class="menu__yen">¥50,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">アドバンスド<br class="menu__pc-none">オープンウォーターコース</dt>
+                  <dd class="menu__yen">¥60,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">レスキュー＋EFRコース</dt>
+                  <dd class="menu__yen">¥70,000</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="price__menu menus__item menu">
+              <div class="menu__title-wrapper">
+                <h2 class="menu__title">体験ダイビング</h2>
+                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+              </div>
+              <dl class="menu__lists">
+                <div class="menu__list">
+                  <dt class="menu__name">ビーチ体験ダイビング<br class="menu__pc-none">(半日)</dt>
+                  <dd class="menu__yen">¥7,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">ビーチ体験ダイビング<br class="menu__pc-none">(1日)</dt>
+                  <dd class="menu__yen">¥14,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">ボート体験ダイビング<br class="menu__pc-none">(半日)</dt>
+                  <dd class="menu__yen">¥10,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">ボート体験ダイビング<br class="menu__pc-none">(1日)</dt>
+                  <dd class="menu__yen">¥18,000</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="price__menu menus__item menu" id="fun-price">
+              <div class="menu__title-wrapper">
+                <h2 class="menu__title">ファンダイビング</h2>
+                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+              </div>
+              <dl class="menu__lists">
+                <div class="menu__list">
+                  <dt class="menu__name">ビーチダイビング<br class="menu__pc-none">(2ダイブ)</dt>
+                  <dd class="menu__yen">¥14,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">ボートダイビング<br class="menu__pc-none">(2ダイブ)</dt>
+                  <dd class="menu__yen">¥18,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">スペシャルダイビング<br class="menu__pc-none">(2ダイブ)</dt>
+                  <dd class="menu__yen">¥24,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">ナイトダイビング<br class="menu__pc-none">(1ダイブ)</dt>
+                  <dd class="menu__yen">¥10,000</dd>
+                </div>
+              </dl>
+            </div>
+            <div class="price__menu menus__item menu" id="special-price">
+              <div class="menu__title-wrapper">
+                <h2 class="menu__title">スペシャルダイビング</h2>
+                <img class="menu__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
+              </div>
+              <dl class="menu__lists">
+                <div class="menu__list">
+                  <dt class="menu__name">貸切ダイビング<br class="menu__pc-none">(2ダイブ)</dt>
+                  <dd class="menu__yen">¥24,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">1日ダイビング<br class="menu__pc-none">(3ダイブ)</dt>
+                  <dd class="menu__yen">¥32,000</dd>
+                </div>
+                <div class="menu__list">
+                  <dt class="menu__name">ナイトダイビング<br class="menu__pc-none">(2ダイブ)</dt>
+                  <dd class="menu__yen">¥14,000</dd>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-    <section class="price price-wrapper">
-      <div class="price__inner inner">
-        <div id="license-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
-        <div class="price__menu">
-          <div class="price__title-wrapper">
-            <h2 class="price__title">ライセンス取得</h2>
-            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-          </div>
-          <dl class="price__lists">
-            <div class="price__list">
-              <dt class="price__name">オープンウォーター<br class="price-pc-none">ダイバーコース</dt>
-              <dd class="price__yen">¥50,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">アドバンスド<br class="price-pc-none">オープンウォーターコース</dt>
-              <dd class="price__yen">¥60,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">レスキュー＋EFRコース</dt>
-              <dd class="price__yen">¥70,000</dd>
-            </div>
-          </dl>
-        </div>
-        <div id="trial-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
-        <div class="price__menu" id="trial-price">
-          <div class="price__title-wrapper">
-            <h2 class="price__title">体験ダイビング</h2>
-            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-          </div>
-          <dl class="price__lists">
-            <div class="price__list">
-              <dt class="price__name">ビーチ体験ダイビング<br class="price-pc-none">(半日)</dt>
-              <dd class="price__yen">¥7,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">ビーチ体験ダイビング<br class="price-pc-none">(1日)</dt>
-              <dd class="price__yen">¥14,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">ボート体験ダイビング<br class="price-pc-none">(半日)</dt>
-              <dd class="price__yen">¥10,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">ボート体験ダイビング<br class="price-pc-none">(1日)</dt>
-              <dd class="price__yen">¥18,000</dd>
-            </div>
-          </dl>
-        </div>
-        <div id="fun-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
-        <div class="price__menu">
-          <div class="price__title-wrapper">
-            <h2 class="price__title">ファンダイビング</h2>
-            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-          </div>
-          <dl class="price__lists">
-            <div class="price__list">
-              <dt class="price__name">ビーチダイビング<br class="price-pc-none">(2ダイブ)</dt>
-              <dd class="price__yen">¥14,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">ボートダイビング<br class="price-pc-none">(2ダイブ)</dt>
-              <dd class="price__yen">¥18,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">スペシャルダイビング<br class="price-pc-none">(2ダイブ)</dt>
-              <dd class="price__yen">¥24,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">ナイトダイビング<br class="price-pc-none">(1ダイブ)</dt>
-              <dd class="price__yen">¥10,000</dd>
-            </div>
-          </dl>
-        </div>
-        <div id="special-price" class="price__anchor"></div><!--ページ内リンクの余白調整-->
-        <div class="price__menu">
-          <div class="price__title-wrapper">
-            <h2 class="price__title">スペシャルダイビング</h2>
-            <img class="price__title-img" src="./assets/images/common/price-deco.png" alt="クジラのアイコンイラスト" />
-          </div>
-          <dl class="price__lists">
-            <div class="price__list">
-              <dt class="price__name">貸切ダイビング<br class="price-pc-none">(2ダイブ)</dt>
-              <dd class="price__yen">¥24,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">1日ダイビング<br class="price-pc-none">(3ダイブ)</dt>
-              <dd class="price__yen">¥32,000</dd>
-            </div>
-            <div class="price__list">
-              <dt class="price__name">ナイトダイビング<br class="price-pc-none">(2ダイブ)</dt>
-              <dd class="price__yen">¥14,000</dd>
-            </div>
-          </dl>
-        </div>
-      </div>
-    </section>
     <!--contact-->
     <section class="contact contact-wrapper contact-wrapper--price">
       <div class="contact__inner inner">
@@ -346,7 +347,8 @@
               <div class="site-map__sub-group">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="./campaign.html#license-campaign">ライセンス取得</a></li>
-                  <li class="site-map__sub-title"><a href="./campaign.html#trial-campaign">貸切体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./campaign.html#tr class="
+                      menu__list"ial-campaign">貸切体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                 </ul>
               </div>
@@ -357,7 +359,8 @@
               <div class="site-map__sub-group">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="./information.html#license-info">ライセンス講習</a></li>
-                  <li class="site-map__sub-title"><a href="./information.html#trial-info">体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./information.html#tr class="
+                      menu__list"ial-info">体験ダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./information.html#fun-info">ファンダイビング</a></li>
                 </ul>
               </div>
@@ -371,7 +374,8 @@
               <div class="site-map__sub">
                 <ul class="site-map__sub-titles">
                   <li class="site-map__sub-title"><a href="./price.html#license-price">ライセンス講習</a></li>
-                  <li class="site-map__sub-title"><a href="./price.html#trial-price">体験ダイビング</a></li>
+                  <li class="site-map__sub-title"><a href="./price.html#tr class=" menu__list"ial-price">体験ダイビング</a>
+                  </li>
                   <li class="site-map__sub-title"><a href="./price.html#fun-price">ファンダイビング</a></li>
                   <li class="site-map__sub-title"><a href="./price.html#special-price">スペシャル<wbr />ダイビング</a></li>
 
