--- a/src/site-map.html
+++ b/src/site-map.html
@@ -178,15 +178,13 @@
         <h1>Site MAP</h1>
       </div>
     </section>
-    <div class="bread">
-      <div class="bread__inner inner">
+    <div class="inner">
+      <div class="bread">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">サイトマップ</div>
       </div>
-    </div>
-    <section class="site-map-wrapper ">
-      <div class="site-map_inner inner">
+      <section class="site-map-wrapper ">
         <nav class="site-map site-map--lower">
           <div class="site-map__sp-layout site-map__sp-layout--lower">
             <div class="site-map__content">
@@ -199,7 +197,8 @@
                   <li class="site-map__sub-title"><a href="./campaign.html#fun-campaign">ナイトダイビング</a></li>
                 </ul>
               </div>
-              <div class="site-map__main-title site-map__main-title--black"><a href="./about-us.html">私たちについて</a></div>
+              <div class="site-map__main-title site-map__main-title--black"><a href="./about-us.html">私たちについて</a>
+              </div>
             </div>
             <div class="site-map__main">
               <div class="site-map__main-title site-map__main-title--black"><a href="./information.html">ダイビング情報</a>
@@ -229,18 +228,20 @@
               </div>
             </div>
             <ul class="site-map__main">
-              <li class="site-map__main-title site-map__main-title--black"><a href="./contact-FAQ.html">よくある質問</a></li>
+              <li class="site-map__main-title site-map__main-title--black"><a href="./contact-FAQ.html">よくある質問</a>
+              </li>
               <li class="site-map__main-title site-map__main-title--black">
                 <a href="./privacy.html">プライバシー<wbr />ポリシー</a>
               </li>
               <li class="site-map__main-title site-map__main-title--black"><a href="./terms-of-service.html">利用規約</a>
               </li>
-              <li class="site-map__main-title site-map__main-title--black"><a href="./contact-form.html">お問い合わせ</a></li>
+              <li class="site-map__main-title site-map__main-title--black"><a href="./contact-form.html">お問い合わせ</a>
+              </li>
             </ul>
           </div>
         </nav>
-      </div>
-    </section>
+      </section>
+    </div>
     <!--contact-->
     <section class="contact contact-wrapper contact-wrapper--site-map">
       <div class="contact__inner inner">
