--- a/src/voice.html
+++ b/src/voice.html
@@ -180,25 +180,21 @@
         <h1>Voice</h1>
       </div>
     </section>
-    <div class="bread">
-      <div class="bread__inner inner">
+    <div class="inner">
+      <div class="bread">
         <a href="index.html" class="bread__top">TOP</a>
         <div class="bread__arrow"><img src="./assets/images/common/pager.png" alt="パンくず矢印"></div>
         <div class="bread__detail">お客様の声</div>
       </div>
-    </div>
-    <section class="voice voice-wrapper">
-      <div class="voice__inner inner">
-        <div class="voice__tabs-wrapper">
-          <div class="voice__tabs tabs">
-            <input type="radio" checked id="1" name="voice" /><label for="1">ALL</label>
-            <input type="radio" id="2" name="voice" /><label for="2">ライセンス講習</label>
-            <input type="radio" id="3" name="voice" /><label for="3">ファンダイビング</label><input type="radio" id="4"
-              name="voice" /><label for="4">体験ダイビング</label>
-          </div>
+      <section class="voice voice-wrapper">
+        <div class="voice__tabs tabs">
+          <a href="#" class="tabs__item tab">ALL</a>
+          <a href="#" class="tabs__item tab">ライセンス講習</a>
+          <a href="#" class="tabs__item tab">ファンダイビング</a>
+          <a href="#" class="tabs__item tab">体験ダイビング</a>
         </div>
         <div class="voice__cards voice-cards">
-          <div class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -218,7 +214,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
           </div>
-          <div class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -238,7 +234,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
           </div>
-          <div class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -258,7 +254,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
           </div>
-          <div class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -278,7 +274,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
           </div>
-          <div class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -298,7 +294,7 @@
               ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
             </p>
           </div>
-          <div class="voice-cards__item voice-card voice-card--lower">
+          <div class="voice-cards__item voice-card">
             <div class="voice-card__info">
               <div class="voice-card__customer-data-wrapper">
                 <div class="voice-card__customer-data">
@@ -336,15 +332,17 @@
               <a href="#" class="pager__number">5</a>
               <a href="#" class="pager__number">6</a>
             </div>
-            <a href="#" class="pager__after"><svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18"
-                fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="#" class="pager__after">
+              <svg class="pager__svg" width="10" height="18" viewBox="0 0 10 18" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path class="pager__path" d="M1 1L9 9L1 17" stroke="#408F95" stroke-linecap="round"
                   stroke-linejoin="round" />
-              </svg></a>
+              </svg>
+            </a>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <!--contact-->
     <section class="contact contact-wrapper  contact-wrapper--voice">
       <div class="contact__inner inner">
